Layout bugs fixed.

--- a/assets/css/config.css
+++ b/assets/css/config.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "Vazirmatn";
-    src: url("./assets/font/Vazirmatn[wght].woff2") format("woff2 supports variations"),
-        url("./assets/font/Vazirmatn[wght].woff2") format("woff2-variations");
+    src: url("../font/Vazirmatn[wght].woff2") format("woff2 supports variations"),
+        url("../font/Vazirmatn[wght].woff2") format("woff2-variations");
     font-weight: 100 900;
     font-style: normal;
     font-display: swap;
